--- a/config/database.yml
+++ b/config/database.yml
@@ -4,33 +4,22 @@
 #   Ensure the SQLite 3 gem is defined in your Gemfile
 #   gem 'sqlite3'
 #
-development:
-  adapter: mysql2
-  database: zadanie1
-  username: root
-  password:
-  host: localhost
+default: &default
+  adapter: sqlite3
+  pool: 5
+  timeout: 5000
 
 development:
-  adapter: mysql2
-  database: zadanie1
-  username: root
-  password:
-  host: localhost
+  <<: *default
+  database: db/development.sqlite3
 
 # Warning: The database defined as "test" will be erased and
 # re-generated from your development database when you run "rake".
 # Do not set this db to the same as development or production.
-development:
-  adapter: mysql2
-  database: zadanie1
-  username: root
-  password:
-  host: localhost
+test:
+  <<: *default
+  database: db/test.sqlite3
 
-development:
-  adapter: mysql2
-  database: zadanie1
-  username: root
-  password:
-  host: localhost
+production:
+  <<: *default
+  database: db/production.sqlite3
